completed sh.com page

--- a/sexual_health.html
+++ b/sexual_health.html
@@ -52,21 +52,21 @@
 	<div class="row">
 		<div class="six columns description">
 			<h3>challenge</h3>
-			<p>Charity bike rides are a great way for an organization to raise money through individual efforts.  The problem is donations end during the ride&mdash;the most compelling part of the experience.  We needed a way to share the riders' efforts with their donors to compell them to donate more.</p>
+			<p>To merge an large, existing sexual health knowledge base web site with a proven online medical testing solution to provide customers a complete health care solution.</p>
 		</div>
 		<div class="six columns description">
 			<h3>solution</h3>
-			<p>We created Sagwag to drive donors through social media to an online community where they could experience the ride in real time and make donations to give the rider the push they needed.  Using an integrated team made up of myself and two designers, we used close collaboration and an iterative process to crank out an alpha release within a 3 week cycle.</p>
+			<p>Guiding users to the information and services they are looking for while preserving the first page search results ranking of the existing content were our highest priorities.  Extensive research and exploration was done investigating the relationships of the information with the services to provide a rich experience.</p>
 		</div>
 	</div>
 	<div class="row">
 		<div class="six columns description">
 			<h3>the result</h3>
-			<p>We tested Sagwag out as an alpha release during the Courage Classic, a three-day  charity ride that benefits the Children’s Hospital. The riders that activated their social networks were able to raise an additional 20% in pledges on the day of the event through Sagwag.</p>
+			<p>Sexualhealth.com established a beachhead on the internet as a complete source for sexual health education, testing and counseling.  </p>
 		</div>
 		<div class="six columns description">
 			<h3>my role</h3>
-			<p>For this fast-turnaround project I acted in multiple roles as UX architect, project manager and rails developer.  The amazing UI design was created by Jerry Stafford, Art Director and Ben Wallace, designer, at Pure.</p>
+			<p>My primary role was lead user experience architect working closely with the Director of User Experience, Jon Kawa, the Chief Creative Officer, Michelle Sobel and designer, Jason Grant. I also worked on coding prototypes for our main website and mobile.</p>
 		</div>
 	</div>
 
@@ -76,8 +76,8 @@
 			<img class="photo" alt="placeholder" src="/images/portfolio/sexual_health/integration.jpg">
 
 			<div class="caption">
-				<h3>approach</h3>
-				<p>Working through several iterations on a whiteboard, we focused on two major drivers:  how can we capture the excitement of the rider's experience online and how to motivate users to join and donate.</p>
+				<h3>information relationships</h3>
+				<p>This diagram illustrates the organization of site-wide information and opportunities for content to support multiple areas</p>
 			</div>
 		</div>
 	</div>
@@ -88,8 +88,8 @@
 			<img class="photo" alt="placeholder" src="/images/portfolio/sexual_health/sitemap.jpg">
 
 			<div class="caption">
-				<h3>technology</h3>
-				<p>Built using Ruby on Rails for rapid development, we leveraged the Facebook API for authentication and the broadcasting of signup and donation events.  The Geoloci API was used for real-time geolocation of the rider and firing events when the rider reached the toughest part of the ascent.</p>
+				<h3>site map</h3>
+				<p>The initial site map for organizing sexual health information and our testing services.</p>
 			</div>
 		</div>
 	</div>
@@ -100,8 +100,8 @@
 			<img class="photo" alt="placeholder" src="/images/portfolio/sexual_health/location_flow.jpg">
 
 			<div class="caption">
-				<h3>result</h3>
-				<p>With the success of earning an extra 20% for each rider, we interviewed the riders and donors gathering valuable information for improving the next version of Sagwag. </p>
+				<h3>testing user flow</h3>
+				<p>The testing service utilizes labs near the user so geolocation was an important step in the process. </p>
 			</div>
 		</div>
 	</div>
@@ -110,11 +110,6 @@
 	<div class="row">
 		<div class="twelve columns">
 			<img class="photo" alt="placeholder" src="/images/portfolio/sexual_health/screens01.jpg">
-
-			<div class="caption">
-				<h3>result</h3>
-				<p>With the success of earning an extra 20% for each rider, we interviewed the riders and donors gathering valuable information for improving the next version of Sagwag. </p>
-			</div>
 		</div>
 	</div>
 
@@ -122,11 +117,6 @@
 	<div class="row">
 		<div class="twelve columns">
 			<img class="photo" alt="placeholder" src="/images/portfolio/sexual_health/screens02.jpg">
-
-			<div class="caption">
-				<h3>result</h3>
-				<p>With the success of earning an extra 20% for each rider, we interviewed the riders and donors gathering valuable information for improving the next version of Sagwag. </p>
-			</div>
 		</div>
 	</div>
 
