updated header copy and type size

--- a/footer.html
+++ b/footer.html
@@ -3,11 +3,11 @@
 		<div class="row">
 			<div class="five columns">
 				<h4>clients</h4>
-				<p>client list here</p>
+				<p>Western Union, Western Governors Association, Stetson, Analyte Health, Magpul Industries, Herman Miller, Accenture</p>
 			</div>
 			<div class="five columns offset-by-two">
-				<h4>technologies</h4>
-				<p>technologies list here.  logos?</p>
+				<h4>capabilities</h4>
+				<p>User experience design, User interface design, Interaction design, Agile, Lean Startup, Rapid prototyping, Foundation CSS, Ruby on Rails, jQuery, Javascript, Facebook Graph API, Instagram API, LinkedIn API, Html5, CSS3, PHP</p>
 			</div>
 		</div>
 		<div class="row">
