--- a/header.html
+++ b/header.html
@@ -15,7 +15,7 @@
 		</div>
 		<div class="row">
 			<div class="eight centered columns">
-				<h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec neque vel risus accumsan posuere. Integer viverra scelerisque tempus. Nulla at fermentum turpis. Praesent mollis nisi turpis. Aliquam luctus mi at orci ultrices lacinia.</h3>
+				<h3>I'm a user experience architect and technologist that utilizes my breadth of skills in design and rapid prototyping to quickly develop solutions for business.</h3>
 			</div>
 		</div>
 	</div>
